--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "devDependencies": {
         "@eslint/eslintrc": "^3",
         "@types/node": "^20",
+        "@trivago/prettier-plugin-sort-imports": "^4.3.0",
         "@types/react": "^19",
         "@types/react-dom": "^19",
         "eslint": "^9",
