--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev --turbopack",
+        "dev": "next dev --turbopack -p 3001",
         "build": "next build",
         "start": "next start",
         "lint": "next lint"
@@ -12,6 +12,7 @@
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.0",
         "@mui/material": "^6.3.1",
+        "motion": "^11.17.0",
         "next": "15.1.4",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
@@ -19,8 +20,8 @@
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
-        "@types/node": "^20",
         "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+        "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
         "eslint": "^9",
