--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev --turbopack -p 3001",
+        "dev": "env-cmd -f .env next dev --turbopack -p 3001",
         "build": "next build",
         "start": "next start",
         "lint": "next lint"
@@ -42,6 +42,7 @@
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
+        "env-cmd": "^10.1.0",
         "eslint": "^9",
         "eslint-config-next": "15.1.4",
         "postcss": "^8",
