--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "firebase": "^11.3.1",
+        "firebase-admin": "^13.2.0",
+        "firebase-functions": "^6.3.2",
         "lucide-react": "^0.476.0",
         "motion": "^11.17.0",
         "next": "15.1.4",
@@ -31,6 +33,7 @@
         "react-icons": "^5.4.0",
         "react-redux": "^9.2.0",
         "sonner": "^2.0.1",
+        "stripe": "^17.7.0",
         "tailwind-merge": "^3.0.2",
         "tailwindcss-animate": "^1.0.7",
         "vaul": "^1.1.2",
@@ -42,6 +45,8 @@
         "@types/node": "^20",
         "@types/react": "^19",
         "@types/react-dom": "^19",
+        "@typescript-eslint/eslint-plugin": "^8.26.1",
+        "@typescript-eslint/parser": "^8.26.1",
         "env-cmd": "^10.1.0",
         "eslint": "^9",
         "eslint-config-next": "15.1.4",
