--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "stripe": "^17.7.0",
         "tailwind-merge": "^3.0.2",
         "tailwindcss-animate": "^1.0.7",
+        "uuid": "^11.1.0",
         "vaul": "^1.1.2",
         "yup": "^1.6.1"
     },
