--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@radix-ui/react-checkbox": "^1.1.4",
         "@radix-ui/react-dialog": "^1.1.6",
         "@radix-ui/react-select": "^2.1.6",
+        "@radix-ui/react-separator": "^1.1.2",
         "@radix-ui/react-slot": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
         "@reduxjs/toolkit": "^2.6.0",
@@ -25,7 +26,7 @@
         "firebase": "^11.3.1",
         "firebase-admin": "^13.2.0",
         "firebase-functions": "^6.3.2",
-        "lucide-react": "^0.476.0",
+        "lucide-react": "^0.483.0",
         "motion": "^11.17.0",
         "next": "15.1.4",
         "next-themes": "^0.4.4",
